Changement images draggable

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>fiona delaloye</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Athiti:500" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
 	</head>
 	
 	<body>
@@ -14,38 +14,42 @@
 			25 ans<br>
 			Suisse<br>
 			<a href="mailto:delaloyefiona@gmail.com">Contact: delaloyefiona@gmail.com </a></h1>
-			<br>
-			2015 - Aujourd’hui
-			<h2>CFC de Graphiste,</h2>
+			<br><br><br>
+			2015 - Aujourd’hui<br>
+			<b>CFC de Graphiste,</b><br>
 			formation accélerée à plein temps<br>
 			ERACOM, Lausanne<br>
-			<h2>Serveuse</h2>
+			<b>Serveuse</b><br>
 			Le Calembour, Aigle<br><br>
-			Juillet 2016
-			<h2>Stage en sérigraphie,</h2>
+			Juillet 2016<br>
+			<b>Stage en sérigraphie,</b>
 			durée d'une semaine,<br>
 			LOWRIDER, Fribourg<br><br>
-			2014 - 2015
-			<h2>Employée en administratif, vente et finishing</h2>
+			2014 - 2015<br>
+			<b>Employée en administratif, vente et finishing</b><br>
 			Studio Patrick, Villars-sur-Ollon<br>
-			<h2>Vendeuse en boutique et épicerie fine</h2>
+			<b>Vendeuse en boutique et épicerie fine</b><br>
 			Particules en Suspension et Particules Fines, Lausanne<br>
 			<br>
-			2013 - 2014
-			<h2>Vendeuse en section photo</h2>
+			2013 - 2014<br>
+			<b>Vendeuse en section photo</b>
 			Mediamarkt, Conthey<br>
 			<br>
-			2012 - 2012
-			<h2>Employée spécialisée en finishing</h2>
+			2012 - 2012<br>
+			<b>Employée spécialisée en finishing</b><br>
 			Studio Patrick, Villars-sur-Ollon<br><br>
-			2009 - 2012
-			<h2>Apprentissage de spécialiste en photographie, section Finishing</h2>
+			2009 - 2012<br>
+			<b>Apprentissage de spécialiste en photographie, section Finishing</b><br>
 			Studio Patrick, Villars-sur-Ollon<br></p>
 		</div> <!-- fin galerie -->
 	
-		<div class="descriptif">
+		<div class="descriptifme">
 			<img id="me" src="img/me.png">
 		</div><!-- fin decriptif -->
+		
+			<div class="home">
+			<a href="index.html"><h3>home</h3></a>
+			</div>
 
 	
 	</div> <!-- fin global -->
