--- a/hirondelle.html
+++ b/hirondelle.html
@@ -10,17 +10,16 @@
 	<body>
 		<div id="global">
 			<div class="galerie">
-				<img src="img/hommage/hommage1.jpg">
-				<img src="img/hommage/hommage2.jpg">
-				<img src="img/hommage/hommage3.jpg">
-				<img src="img/hommage/hommage4.jpg">
-				<img src="img/hommage/hommage5.jpg">
+				<img src="img/hirondelle/hirondelle1.jpg">
+				<img src="img/hirondelle/hirondelle2.jpg">
+				<img src="img/hirondelle/hirondelle3.jpg">
+				<img src="img/hirondelle/hirondelle4.jpg">
 			</div>
 
 			<div class="descriptif">
 				<p><b>Hommage</b><br><br>
 				Le principe de l'exercice était de rendre <br>
-				hommage à l'artiste de notre choix en utilisant<br>
+				hommage à l'artiste de notre choix en utilisant
 				certains de ses codes, idées, impressions.<br>
 				Choix de l'artiste: Hannes Caspar<br>
 				<br>
@@ -30,7 +29,7 @@
 			</div>
 			
 			<div class="home">
-				<a href="index.html"><h3>home</h3></a>
+			<a href="index.html"><h3>home</h3></a>
 			</div>
 
 	
