--- a/piscine.html
+++ b/piscine.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>fiona delaloye</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Athiti" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 	</head>
 	
 	<body>
@@ -39,7 +39,7 @@
 		</div>
 		
 		<div class="home">
-			<a href="index.html">👾</a>
+			<a href="index.html"><h3>home</h3></a>
 		</div>
 
 	
