--- a/hommage.html
+++ b/hommage.html
@@ -30,7 +30,7 @@
 			</div>
 			
 			<div class="home">
-				<a href="index.html"><h3>home</h3></a>
+				<a href="index.html">home</a>
 			</div>
 
 	
