--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 		<meta name="viewport" content="initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
-	<!-- <style>
-  		#draggable { width: 200px; height: 150px; padding: 0.5em; }
-	</style> -->
 	</head>
 	
 	<body>
@@ -66,44 +63,10 @@
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
  	<script>
 		$( function() {
-		$( "#draggable1" ).draggable();		
+		$( ".objet" ).draggable();		
  		} );
  	</script>
- 	<script>
- 		$( function() {
-    	$( "#draggable2" ).draggable();
- 		} );
- 	</script>
- 	<script>
-  		$( function() {
-    	$( "#draggable3" ).draggable();
- 		} );
- 	</script>
- 	<script>
-  		$( function() {
-    	$( "#draggable4" ).draggable();
- 		} );
- 	</script>
- 	<script>
-  		$( function() {
-    	$( "#draggable5" ).draggable();
- 		} );
- 	</script>
- 	<script>
-  		$( function() {
-    	$( "#draggable6" ).draggable();
- 		} );
- 	</script>
- 	<script>
-  		$( function() {
-    	$( "#draggable7" ).draggable();
- 		} );
- 	</script>
- 	<script>
-  		$( function() {
-    	$( "#draggable8" ).draggable();
- 		} );
- 	</script>
+ 	
  	
 
 
