Suppression du jQuery
Suppression jQuery, retour aux images disposées en désordre dans l’index

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 			<b>Serveuse</b><br>
 			Le Calembour, Aigle<br><br>
 			Juillet 2016<br>
-			<b>Stage en sérigraphie,</b>
+			<b>Stage en sérigraphie,</b><br>
 			durée d'une semaine,<br>
 			LOWRIDER, Fribourg<br><br>
 			2014 - 2015<br>
@@ -32,7 +32,7 @@
 			Particules en Suspension et Particules Fines, Lausanne<br>
 			<br>
 			2013 - 2014<br>
-			<b>Vendeuse en section photo</b>
+			<b>Vendeuse en section photo</b><br>
 			Mediamarkt, Conthey<br>
 			<br>
 			2012 - 2012<br>
