Index "en vrac" et création mobile pour les galeries

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 			Suisse<br>
 			<a href="mailto:delaloyefiona@gmail.com">Contact: delaloyefiona@gmail.com </a></h1>
 			<br><br><br>
-			2015 - Aujourd’hui<br>
+			<p class="aboutp">Aujourd’hui<br>
 			<b>CFC de Graphiste,</b><br>
 			formation accélerée à plein temps<br>
 			ERACOM, Lausanne<br>
@@ -40,7 +40,7 @@
 			Studio Patrick, Villars-sur-Ollon<br><br>
 			2009 - 2012<br>
 			<b>Apprentissage de spécialiste en photographie, section Finishing</b><br>
-			Studio Patrick, Villars-sur-Ollon<br></p>
+			Studio Patrick, Villars-sur-Ollon<br></div>
 		</div> <!-- fin galerie -->
 	
 		<div class="descriptifme">
