--- a/cafe.html
+++ b/cafe.html
@@ -15,19 +15,12 @@
 			</div>
 
 			<div class="descriptif">
-				<b>Workshop</b><br>
-				Une lettre de l'alphabet nous était distribuée<br>
-				puis nous avons du trouver un objet qui<br>
-				serait, pour nous, en relation avec l'ERACOM.<br>
-				J'ai reçu le C.<br>
-				J'ai choisi le café.<br><br>
-				Intervenants<br>
-				Jonas Wandeler et Robert Huber 
+				Workshop avec Jonas Wandeler et Robert Huber, où une lettre de l’alphabet nous était distribuée et où nous devions choisir un objet qui, pour nous, serait en relation avec l’ERACOM. J’ai reçu la lettre C, j’ai choisi le café.
 			
 			</div>
 			
 			<div class="home">
-				<a href="index.html"><h3>home</h3></a>
+				<a href="index.html"><b>home</b></a>
 			</div>
 
 	
