--- a/calembour.html
+++ b/calembour.html
@@ -16,16 +16,12 @@
 		</div>
 			
 		<div class="descriptif">
-			<p><b>Calembour</b><br>
-			<br>Réalisation d'un mandat pour <br>
-			le bar le Calembour, à Aigle.<br>
-			Réalisation de l'identité visuelle<br>
-			ainsi que de la carte des bières (à venir!)
+		Création de l’identité visuelle ainsi que de la carte des bières pour le bar Le Calembour, à Aigle (vd).
 		</p>
 		</div>
 		
 		<div class="home">
-			<a href="index.html"><h3>home</h3></a>
+				<a href="index.html"><b>home</b></a>
 		</div>
 
 	
