--- a/hirondelle.html
+++ b/hirondelle.html
@@ -17,19 +17,12 @@
 			</div>
 
 			<div class="descriptif">
-				<p><b>Hommage</b><br><br>
-				Le principe de l'exercice était de rendre <br>
-				hommage à l'artiste de notre choix en utilisant
-				certains de ses codes, idées, impressions.<br>
-				Choix de l'artiste: Hannes Caspar<br>
-				<br>
-				Nikon D90 et Nikon D800<br>
-				Utilisation de fourres en plastique <br>
-				transparentes pour les zones de couleur.</p>
+				Création d'une identité ainsi que de ses accessoires
+				pour une librairie fictive.
 			</div>
 			
 			<div class="home">
-			<a href="index.html"><h3>home</h3></a>
+				<a href="index.html"><b>home</b></a>
 			</div>
 
 	
