--- a/jjdress.html
+++ b/jjdress.html
@@ -10,21 +10,17 @@
 	<body>
 		<div id="global">
 			<div class="galerie">
-				<img src="img/hommage/hommage1.jpg">
-				<img src="img/hommage/hommage2.jpg">
-				<img src="img/hommage/hommage3.jpg">
-				<img src="img/hommage/hommage4.jpg">
-				<img src="img/hommage/hommage5.jpg">
+				<img src="img/hirondelle/hirondelle1.jpg">
+
 			</div>
 
 			<div class="descriptif">
-				Réalisation d’un projet visant à rendre hommage à l’artiste de notre choix (ici, le photographe Hannes Caspar) en reprenant certains de ses codes, ambiances, idées. 
+			Création du logo ainsi que de la carte de visite pour la boutique de prêt-à-porter lausannoise JJ Dress.
 			</div>
 			
 			<div class="home">
 				<a href="index.html"><b>home</b></a>
 			</div>
-
 
 	
 		<div class="footer">
