--- a/piscine.html
+++ b/piscine.html
@@ -20,26 +20,12 @@
 		</div>
 			
 		<div class="descriptif">
-			<p><b>Projet Piscine</b><br>
-			<br>Affiches et cartes postales
-			Promotion d'un abonnement commun de cinq piscines Lausannoises.
-			Aucune contrainte, projet libre, le but étant de produire le plus d'idées possibles.
-			<br>
-			<br>
-			Série d'affiches et de cartes postales à partir de photos 
-			prises dans les 5 piscines. Ajout d'un effet kaléidoscope 
-			afin de rappeler l'enfance, l'été, les jeux, apporter un regard différent 
-			sur les piscines et jouer avec les perspectives.
-			Le principe est de pouvoir vendre les cartes et posters aux entrées
-			des piscines, de donner envie aux visiteurs de collectionner 
-			les différents produits, de s'amuser à reconnaitre à quelles
-			piscines appartiennent les photos et d'amener un objet 
-			avec une mise en page soignée qui donne aussi envie de 
-			l'acheter pour son côté esthétique. </p>
+			Workshop où nous devions fournir des créations libres aidant à la promotion d’un abonnement pour cinq piscines lausannoises.
+
 		</div>
 		
 		<div class="home">
-			<a href="index.html"><h3>home</h3></a>
+				<a href="index.html"><b>home</b></a>
 		</div>
 
 	
