--- a/porteouverte.html
+++ b/porteouverte.html
@@ -14,17 +14,12 @@
 			</div>
 
 			<div class="descriptif">
-				<p><b>Portes ouvertes</b><br>
-				Réalisation d'une affiche pour<br>
-				les portes ouvertes de l'ERACOM.
-				<br><br>
-				Intervenant<br>
-				Giorgio Pesce<br><br>
+				Workshop avec l’Atelier Poisson où nous avons du réaliser une affiche pour les portes ouvertes de l’ERACOM.
 				
 			</div>
 			
 			<div class="home">
-			<a href="index.html"><h3>home</h3></a>
+				<a href="index.html"><b>home</b></a>
 			</div>
 
 	
