--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 		<meta name="viewport" content="initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
+		<link rel="stylesheet" media="screen and (max-width: 640px)" href="smallscreen.css" type="text/css" />
 	</head>
 	
 	<body>
 		<div id="global">
+			<div class="galerieindex">
 			<div class="nav">
 				<ul>
 					<li><a href="index.html"><h1>Fiona Delaloye</h1></a></li>
@@ -21,29 +23,18 @@
 					<li><a href="mariages.html">pro</a></li>
 				</ul>
 			</div> <!-- fin nav -->
-			<div class="contenugalerie">
-				<div class="contenuindex">
-					<a class="objet photo" href="hommage.html"><img id="hommage" class="opacite" src="img/hommage.jpg"></a>
-					<a class="objet graphisme" href="piscine.html"><img id="piscine" class="opacite" src="img/piscine.jpg"></a>
-					<a class="objet graphisme" href="voeux.html"><img id="cartevoeux" class="opacite" src="img/cartevoeux.jpg"></a>
-					<a class="objet graphisme" href="cafe.html"><img id="cafe" class="opacite" src="img/cafe.jpg"></a>
-					<a class="objet graphisme" href="porteouverte.html"><img id="porteouverte" class="opacite" src="img/porteouverte.jpg"></a>
-					<a class="objet graphisme" href="#"><img id="jjdress"class="opacite" src="img/jjdress.png"></a>
-					<a class="objet graphisme" href="hirondelle.html"><img id="hirondelle" class="opacite" src="img/hirondelle.jpg"></a>
-					<a class="objet graphisme" href="calembour.html"><img id="calembour" class="opacite" src="img/calembour.png"></a>
-				</div> <!-- fin contenuindex -->
-			</div>
-
-			
-	
-
-		<!-- 
-<div class="footer">
-			<p>© fiona delaloye</p>
-		</div>
- -->
-
+					<a class="objet photo" href="hommage.html"><img id="hommage" class="opacite" src="img/index/hommage.jpg"></a>
+					<a class="objet graphisme" href="piscine.html"><img id="piscine" class="opacite" src="img/index/piscine.jpg"></a>
+					<a class="objet graphisme" href="voeux.html"><img id="cartevoeux" class="opacite" src="img/index/voeux.jpg"></a>
+					<a class="objet graphisme" href="cafe.html"><img id="cafe" class="opacite" src="img/index/cafe.jpg"></a>
+					<a class="objet graphisme" href="porteouverte.html"><img id="porteouverte" class="opacite" src="img/index/porteouverte.jpg"></a>
+					<a class="objet graphisme" href="#"><img id="jjdress"class="opacite" src="img/index/jjdress.png"></a>
+					<a class="objet graphisme" href="hirondelle.html"><img id="hirondelle" class="opacite" src="img/index/hirondelle.jpg"></a>
+					<a class="objet graphisme" href="calembour.html"><img id="calembour" class="opacite" src="img/index/calembour.png"></a>
+					<a class="objet graphisme" href="jjdress.html"><img id="jjdress" class="opacite" src="img/index/jjdress.png"></a>
 	</div> <!-- fin global -->
+	</div> <!-- fin galerieindex -->
+
 	
 	<script>
 		function filtrer(classefiona) {
