--- a/voeux.html
+++ b/voeux.html
@@ -22,7 +22,7 @@
 			</div>
 			
 			<div class="home">
-			<a href="index.html"><h1>home</h1></a>
+				<a href="index.html"><b>home</b></a>
 			</div>
 
 	
