Dernière version site + mobile

--- a/jjdress.html
+++ b/jjdress.html
@@ -4,14 +4,13 @@
 		<meta charset="utf-8">
 		<title>fiona delaloye</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Miriam+Libre" rel="stylesheet">
 	</head>
 	
 	<body>
 		<div id="global">
 			<div class="galerie">
-				<img src="img/hirondelle/hirondelle1.jpg">
-
+				<img src="img/jjdress/jjdress4.jpg">
 			</div>
 
 			<div class="descriptif">
