--- a/about.html
+++ b/about.html
@@ -4,54 +4,52 @@
 		<meta charset="utf-8">
 		<title>fiona delaloye</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Miriam+Libre" rel="stylesheet">
 	</head>
 	
 	<body>
 	<div id="global">
 		<div class="galerie">
-			<h1>Fiona Delaloye<br>
-			25 ans<br>
+			<p class="pabout1">Fiona Delaloye<br>
+			26 ans<br>
 			Suisse<br>
-			<a href="mailto:delaloyefiona@gmail.com">Contact: delaloyefiona@gmail.com </a></h1>
-			<br><br><br>
-			<p class="aboutp">Aujourd’hui<br>
-			<b>CFC de Graphiste,</b><br>
+			<a href="mailto:delaloyefiona@gmail.com">Contact</a><br></p>
+			<p class="pabout2"><br><br><br>
+			Aujourd’hui<br>
+			CFC de Graphiste,<br>
 			formation accélerée à plein temps<br>
 			ERACOM, Lausanne<br>
-			<b>Serveuse</b><br>
+			Serveuse<br>
 			Le Calembour, Aigle<br><br>
 			Juillet 2016<br>
-			<b>Stage en sérigraphie,</b><br>
-			durée d'une semaine,<br>
+			Stage en sérigraphie,<br>
 			LOWRIDER, Fribourg<br><br>
 			2014 - 2015<br>
-			<b>Employée en administratif, vente et finishing</b><br>
+			Employée en administratif, vente et finishing<br>
 			Studio Patrick, Villars-sur-Ollon<br>
-			<b>Vendeuse en boutique et épicerie fine</b><br>
+			Vendeuse en boutique et épicerie fine<br>
 			Particules en Suspension et Particules Fines, Lausanne<br>
 			<br>
 			2013 - 2014<br>
-			<b>Vendeuse en section photo</b><br>
+			Vendeuse en section photo<br>
 			Mediamarkt, Conthey<br>
 			<br>
 			2012 - 2012<br>
-			<b>Employée spécialisée en finishing</b><br>
+			Employée spécialisée en finishing<br>
 			Studio Patrick, Villars-sur-Ollon<br><br>
 			2009 - 2012<br>
-			<b>Apprentissage de spécialiste en photographie, section Finishing</b><br>
-			Studio Patrick, Villars-sur-Ollon<br></div>
+			Apprentissage de spécialiste en photographie,<br>
+			section Finishing<br>
+			Studio Patrick, Villars-sur-Ollon<br></p>
 		</div> <!-- fin galerie -->
-	
-		<div class="descriptifme">
+		
 			<img id="me" src="img/me.png">
-		</div><!-- fin decriptif -->
+	
 		
 			<div class="home">
-			<a href="index.html"><h3>home</h3></a>
+				<a href="index.html"><h3>home</h3></a>
 			</div>
-
 	
-	</div> <!-- fin global -->
+		</div> <!-- fin global -->
 	</body>	
 </html>
