--- a/hommage.html
+++ b/hommage.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>fiona delaloye</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Miriam+Libre" rel="stylesheet">
 	</head>
 	
 	<body>
