--- a/index.html
+++ b/index.html
@@ -6,40 +6,31 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="viewport" content="initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Miriam+Libre" rel="stylesheet">
 		<link rel="stylesheet" media="screen and (max-width: 640px)" href="smallscreen.css" type="text/css" />
 	</head>
 	
 	<body>
 		<div id="global">
-					<div class="galerienav">
+				<div class="galerienav">
 					<div class="nav">
 					<ul>
-						<li><a href="index.html"><h1>Fiona Delaloye</h1></a></li>
+						<li><a href="index.html"><b>Fiona Delaloye</b></a></li>
  						<li><a href="#" onclick="filtrer('graphisme');">graphisme</a></li>
 						<li><a href="#" onclick="filtrer('photo');">photographie</a></li>
 						<li><a href="about.html">hey</a></li>
 						<li><a href="https://www.instagram.com/fionadelaloye_/">instagram</a></li>
+<!-- 
 						<li><a href="mariages.html">pro</a></li>
-					</ul>
-				</div> <!-- fin nav -->
-						<!-- 
-						<a class="objet photo" href="hommage.html"><img id="hommage" class="opacite" src="img/index/hommage.jpg"></a>
-						<a class="objet graphisme" href="piscine.html"><img id="piscine" class="opacite" src="img/index/piscine.jpg"></a>
-						<a class="objet graphisme" href="voeux.html"><img id="cartevoeux" class="opacite" src="img/index/voeux.jpg"></a>
-						<a class="objet graphisme" href="cafe.html"><img id="cafe" class="opacite" src="img/index/cafe.jpg"></a>
-						<a class="objet graphisme" href="porteouverte.html"><img id="porteouverte" class="opacite" src="img/index/porteouverte.jpg"></a>
-						<a class="objet graphisme" href="#"><img id="jjdress"class="opacite" src="img/index/jjdress.png"></a>
-						<a class="objet graphisme" href="hirondelle.html"><img id="hirondelle" class="opacite" src="img/index/hirondelle.jpg"></a>
-						<a class="objet graphisme" href="calembour.html"><img id="calembour" class="opacite" src="img/index/calembour.png"></a>
-						<a class="objet graphisme" href="jjdress.html"><img id="jjdress" class="opacite" src="img/index/jjdress.png"></a>
  -->
-						 <a class="objet photo" href="hommage.html"><img class="opacite" src="img/index/hommage.jpg"></a>
+					</ul>
+				</div>
 						<a class="objet graphisme" href="piscine.html"><img class="opacite" src="img/index/piscine.jpg"></a>
+						<a class="objet photo" href="hommage.html"><img class="opacite" src="img/index/hommage.jpg"></a>
 						<a class="objet graphisme" href="voeux.html"><img class="opacite" src="img/index/voeux.jpg"></a>
+						<a class="objet photo" href="blanc.html"><img class="opacite" src="img/index/blanc.jpg"></a>
 						<a class="objet graphisme" href="cafe.html"><img class="opacite" src="img/index/cafe.jpg"></a>
 						<a class="objet graphisme" href="porteouverte.html"><img class="opacite" src="img/index/porteouverte.jpg"></a>
-						<a class="objet graphisme" href="#"><img class="opacite" src="img/index/jjdress.png"></a>
 						<a class="objet graphisme" href="hirondelle.html"><img class="opacite" src="img/index/hirondelle.jpg"></a>
 						<a class="objet graphisme" href="calembour.html"><img class="opacite" src="img/index/calembour.png"></a>
 						<a class="objet graphisme" href="jjdress.html"><img class="opacite" src="img/index/jjdress.png"></a>
