--- a/calembour.html
+++ b/calembour.html
@@ -10,8 +10,8 @@
 	<body>
 	<div id="global">
 		<div class="galerie">
-			<img src="img/calembour/calembour1.png">
-			<img src="img/calembour/calembour2.png">
+			<img src="img/calembour/calembour1.jpg">
+			<img src="img/calembour/calembour2.jpg">
 			<img src="img/calembour/calembour.gif">
 		</div>
 			
