--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 						<a class="objet graphisme" href="cafe.html"><img class="opacite" src="img/index/cafe.jpg"></a>
 						<a class="objet graphisme" href="porteouverte.html"><img class="opacite" src="img/index/porteouverte.jpg"></a>
 						<a class="objet graphisme" href="hirondelle.html"><img class="opacite" src="img/index/hirondelle.jpg"></a>
-						<a class="objet graphisme" href="calembour.html"><img class="opacite" src="img/index/calembour.png"></a>
-						<a class="objet graphisme" href="jjdress.html"><img class="opacite" src="img/index/jjdress.png"></a>
+						<a class="objet graphisme" href="calembour.html"><img class="opacite" src="img/index/calembour.jpg"></a>
+						<a class="objet graphisme" href="jjdress.html"><img class="opacite" src="img/index/jjdress.jpg"></a>
 				</div> <!-- fin galerie -->
 		</div> <!-- fin global -->
 
