--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<title>fiona delaloye</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+				<meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<link href="https://fonts.googleapis.com/css?family=Miriam+Libre" rel="stylesheet">
 	</head>
 	
