--- a/calembour.html
+++ b/calembour.html
@@ -2,6 +2,8 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
+				<meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<title>fiona delaloye</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Miriam+Libre" rel="stylesheet">
