--- a/about.html
+++ b/about.html
@@ -11,12 +11,12 @@
 	
 	<body>
 	<div id="global">
-		<div class="galerie">
-			<p class="pabout1">Fiona Delaloye<br>
+		<div class="galerieabout">
+			<!-- <p id="pabout1"> -->Fiona Delaloye<br>
 			26 ans<br>
 			Suisse<br>
-			<a href="mailto:delaloyefiona@gmail.com">Contact</a><br></p>
-			<p class="pabout2"><br><br><br>
+			<a href="mailto:delaloyefiona@gmail.com">Contact</a><br><!-- </p> -->
+			<!-- <p id="pabout2"> --><br><br><br>
 			Aujourd’hui<br>
 			CFC de Graphiste,<br>
 			formation accélerée à plein temps<br>
@@ -42,16 +42,19 @@
 			2009 - 2012<br>
 			Apprentissage de spécialiste en photographie,<br>
 			section Finishing<br>
-			Studio Patrick, Villars-sur-Ollon<br></p>
-		</div> <!-- fin galerie -->
+			Studio Patrick, Villars-sur-Ollon<br><!-- </p> -->
+		</div> <!-- fin galerieabout-->
 		
-			<img id="me" src="img/me.png">
+		<div class="galerieabout2">
+			<img id="me" src="img/me.jpg">
+		</div>
+
+		<div class="home">
+			<a href="index.html"><b>home</b></a>
+		</div>
 	
-		
-			<div class="home">
-				<a href="index.html"><h3>home</h3></a>
-			</div>
-	
-		</div> <!-- fin global -->
+<!-- 
+		</div> <!~~ fin global ~~>
+ -->
 	</body>	
 </html>
