--- a/index.html
+++ b/index.html
@@ -10,19 +10,17 @@
 	
 	<body>
 		<div id="global">
-				<div class="galerienav">
-					<div class="nav">
+				<div class="nav">
 					<ul>
 						<li><a href="index.html"><b>Fiona Delaloye</b></a></li>
  						<li><a href="#" onclick="filtrer('graphisme');">graphisme</a></li>
 						<li><a href="#" onclick="filtrer('photo');">photographie</a></li>
 						<li><a href="about.html">hey</a></li>
 						<li><a href="https://www.instagram.com/fionadelaloye_/">instagram</a></li>
-<!-- 
-						<li><a href="mariages.html">pro</a></li>
- -->
+						<!--<li><a href="mariages.html">pro</a></li>-->
 					</ul>
-				</div>
+				</div><!-- fin nav -->
+				<div class="galerienav">
 						<a class="objet graphisme" href="piscine.html"><img class="opacite" src="img/index/piscine.jpg"></a>
 						<a class="objet photo" href="hommage.html"><img class="opacite" src="img/index/hommage.jpg"></a>
 						<a class="objet graphisme" href="voeux.html"><img class="opacite" src="img/index/voeux.jpg"></a>
@@ -32,7 +30,7 @@
 						<a class="objet graphisme" href="hirondelle.html"><img class="opacite" src="img/index/hirondelle.jpg"></a>
 						<a class="objet graphisme" href="calembour.html"><img class="opacite" src="img/index/calembour.jpg"></a>
 						<a class="objet graphisme" href="jjdress.html"><img class="opacite" src="img/index/jjdress.jpg"></a>
-				</div> <!-- fin galerie -->
+				</div> <!-- fin galerienav -->
 		</div> <!-- fin global -->
 
 
