RESPONSIVE OK J'ESPERE

--- a/about.html
+++ b/about.html
@@ -4,19 +4,18 @@
 		<meta charset="utf-8">
 		<title>fiona delaloye</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-				<meta name="viewport" content="width=device-width, initial-scale=1">
-
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://fonts.googleapis.com/css?family=Miriam+Libre" rel="stylesheet">
 	</head>
 	
 	<body>
 	<div id="global">
 		<div class="galerieabout">
-			<!-- <p id="pabout1"> -->Fiona Delaloye<br>
+			<h3>Fiona Delaloye<br>
 			26 ans<br>
 			Suisse<br>
-			<a href="mailto:delaloyefiona@gmail.com">Contact</a><br><!-- </p> -->
-			<!-- <p id="pabout2"> --><br><br><br>
+			<a href="mailto:delaloyefiona@gmail.com">Contact</a><br></h3>
+			<br>
 			Aujourd’hui<br>
 			CFC de Graphiste,<br>
 			formation accélerée à plein temps<br>
@@ -42,7 +41,7 @@
 			2009 - 2012<br>
 			Apprentissage de spécialiste en photographie,<br>
 			section Finishing<br>
-			Studio Patrick, Villars-sur-Ollon<br><!-- </p> -->
+			Studio Patrick, Villars-sur-Ollon<br><br><br></p>
 		</div> <!-- fin galerieabout-->
 		
 		<div class="galerieabout2">
@@ -50,7 +49,7 @@
 		</div>
 
 		<div class="home">
-			<a href="index.html"><b>home</b></a>
+				<a href="index.html"><h2>home</h2></a>
 		</div>
 	
 <!-- 
