--- a/jjdress.html
+++ b/jjdress.html
@@ -13,15 +13,16 @@
 		<div id="global">
 			<div class="galerie">
 				<img src="img/jjdress/jjdress4.jpg">
-			</div>
 
 			<div class="descriptif">
-			Création du logo ainsi que de la carte de visite pour la boutique de prêt-à-porter lausannoise JJ Dress.
+				Création du logo ainsi que de la carte de visite pour la boutique de prêt-à-porter lausannoise JJ Dress.
 			</div>
+								</div>
 			
 			<div class="home">
-				<a href="index.html"><b>home</b></a>
+				<a href="index.html"><h2>home</h2></a>
 			</div>
+
 
 	
 		<div class="footer">
