--- a/porteouverte.html
+++ b/porteouverte.html
@@ -16,12 +16,11 @@
 			</div>
 
 			<div class="descriptif">
-				Workshop avec l’Atelier Poisson où nous avons du réaliser une affiche pour les portes ouvertes de l’ERACOM.
-				
+				Workshop avec l’Atelier Poisson où nous avons du réaliser une affiche pour les portes ouvertes de l’ERACOM.	
 			</div>
 			
 			<div class="home">
-				<a href="index.html"><b>home</b></a>
+				<a href="index.html"><h2>home</h2></a>
 			</div>
 
 	
