--- a/hommage.html
+++ b/hommage.html
@@ -24,7 +24,7 @@
 			</div>
 			
 			<div class="home">
-				<a href="index.html"><b>home</b></a>
+				<a href="index.html"><h2>home</h2></a>
 			</div>
 
 
