--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div id="global">
 				<div class="nav">
 					<ul>
-						<li><a href="index.html"><b>Fiona Delaloye</b></a></li>
+						<li><a href="index.html"><h1>Fiona Delaloye</h1></a></li>
  						<li><a href="#" onclick="filtrer('graphisme');">graphisme</a></li>
 						<li><a href="#" onclick="filtrer('photo');">photographie</a></li>
 						<li><a href="about.html">hey</a></li>
@@ -27,9 +27,9 @@
 						<a class="objet photo" href="blanc.html"><img class="opacite" src="img/index/blanc.jpg"></a>
 						<a class="objet graphisme" href="cafe.html"><img class="opacite" src="img/index/cafe.jpg"></a>
 						<a class="objet graphisme" href="porteouverte.html"><img class="opacite" src="img/index/porteouverte.jpg"></a>
-						<a class="objet graphisme" href="hirondelle.html"><img class="opacite" src="img/index/hirondelle.jpg"></a>
 						<a class="objet graphisme" href="calembour.html"><img class="opacite" src="img/index/calembour.jpg"></a>
-						<a class="objet graphisme" href="jjdress.html"><img class="opacite" src="img/index/jjdress.jpg"></a>
+						<a class="objet graphisme" href="hirondelle.html"><img class="opacite" src="img/index/hirondelle.jpg"></a>
+						<!-- <a class="objet graphisme" href="jjdress.html"><img class="opacite" src="img/index/jjdress.jpg"></a> -->
 				</div> <!-- fin galerienav -->
 		</div> <!-- fin global -->
 
