--- a/piscine.html
+++ b/piscine.html
@@ -27,7 +27,7 @@
 		</div>
 		
 		<div class="home">
-				<a href="index.html"><b>home</b></a>
+				<a href="index.html"><h2>home</h2></a>
 		</div>
 
 	
