--- a/illustration.html
+++ b/illustration.html
@@ -12,18 +12,11 @@
 	<body>
 	<div id="global">
 		<div class="galerie">
-			<img src="img/piscine/piscine1.jpg">
-			<img src="img/piscine/piscine2.jpg">
-			<img src="img/piscine/piscine3.jpg">
-			<img src="img/piscine/piscine4.jpg">
-			<img src="img/piscine/postcard1.jpg">
-			<img src="img/piscine/postcard2.jpg">
+			<img src="img/illustration/illustration1.jpg">
+			<img src="img/illustration/illustration2.jpg">
+			<img src="img/illustration/illustration3.jpg">
 		</div>
-			
-		<div class="descriptif">
-			Workshop où nous devions fournir des créations libres aidant à la promotion d’un abonnement pour cinq piscines lausannoises.
-
-		</div>
+	
 		
 		<div class="home">
 				<a href="index.html"><h2>home</h2></a>
