--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 						<li><a href="index.html"><h1>Fiona Delaloye</h1></a></li>
  						<li><a href="#" onclick="filtrer('graphisme');">graphisme</a></li>
 						<li><a href="#" onclick="filtrer('photo');">photographie</a></li>
+						<!-- <li><a href="#" onclick="filtrer('illustration');">illustration</a></li> -->
 						<li><a href="about.html">hey</a></li>
+						
 						<li><a href="https://www.instagram.com/fionadelaloye_/">instagram</a></li>
 						<!--<li><a href="mariages.html">pro</a></li>-->
 					</ul>
@@ -29,6 +31,7 @@
 						<a class="objet graphisme" href="porteouverte.html"><img class="opacite" src="img/index/porteouverte.jpg"></a>
 						<a class="objet graphisme" href="calembour.html"><img class="opacite" src="img/index/calembour.jpg"></a>
 						<a class="objet graphisme" href="hirondelle.html"><img class="opacite" src="img/index/hirondelle.jpg"></a>
+						<!-- <a class="objet illustration" href="illustration.html"><img class="opacite" src="img/illustration/illustration1.jpg"></a> -->
 						<!-- <a class="objet graphisme" href="jjdress.html"><img class="opacite" src="img/index/jjdress.jpg"></a> -->
 				</div> <!-- fin galerienav -->
 		</div> <!-- fin global -->
