--- a/about.html
+++ b/about.html
@@ -46,12 +46,15 @@
 		
 		<div class="galerieabout2">
 			<img id="me" src="img/me.jpg">
+			<a href="index.html"><h2>home</h2></a>
 		</div>
 
-		<div class="home">
+	<!-- 
+	<div class="home">
 				<a href="index.html"><h2>home</h2></a>
 		</div>
 	
+ -->
 <!-- 
 		</div> <!~~ fin global ~~>
  -->
