--- a/cafe.html
+++ b/cafe.html
@@ -18,12 +18,15 @@
 
 			<div class="descriptif">
 				Workshop avec Jonas Wandeler et Robert Huber, où une lettre de l’alphabet nous était distribuée et où nous devions choisir un objet qui, pour nous, serait en relation avec l’ERACOM. J’ai reçu la lettre C, j’ai choisi le café.
-			
+							<a href="index.html"><h2>home</h2></a>
+
 			</div>
 			
-			<div class="home">
+		<!-- 
+	<div class="home">
 				<a href="index.html"><h2>home</h2></a>
 			</div>
+ -->
 
 	
 		<div class="footer">
