--- a/calembour.html
+++ b/calembour.html
@@ -20,11 +20,15 @@
 		<div class="descriptif">
 		Création de l’identité visuelle ainsi que de la carte des bières pour le bar Le Calembour, à Aigle (vd).
 		</p>
+						<a href="index.html"><h2>home</h2></a>
+
 		</div>
 		
-		<div class="home">
+	<!-- 
+	<div class="home">
 				<a href="index.html"><h2>home</h2></a>
 		</div>
+ -->
 
 	
 		<div class="footer">
