--- a/hommage.html
+++ b/hommage.html
@@ -21,12 +21,17 @@
 
 			<div class="descriptif">
 				Réalisation d’un projet visant à rendre hommage à l’artiste de notre choix (ici, le photographe Hannes Caspar) en reprenant certains de ses codes, ambiances, idées. 
-			</div>
+							<a href="index.html"><h2>home</h2></a>
+
 			
+			</div>
+		<!-- 
+	
 			<div class="home">
 				<a href="index.html"><h2>home</h2></a>
 			</div>
 
+ -->
 
 	
 		<div class="footer">
