--- a/piscine.html
+++ b/piscine.html
@@ -22,12 +22,14 @@
 			
 		<div class="descriptif">
 			Workshop où nous devions fournir des créations libres aidant à la promotion d’un abonnement pour cinq piscines lausannoises.
-
+			<a href="index.html"><h2>home</h2></a>
 		</div>
 		
-		<div class="home">
+	<!-- 
+	<div class="home">
 				<a href="index.html"><h2>home</h2></a>
 		</div>
+ -->
 
 	
 		<div class="footer">
