--- a/blanc.html
+++ b/blanc.html
@@ -18,11 +18,15 @@
 			
 		<div class="descriptif">
 			Projet en cours d’un documentaire fictif où j’illustre la vie d’une jeune fille qui ressent le besoin de s’entourer complètement de blanc.
+						<a href="index.html"><h2>home</h2></a>
+
 		</div>
-		
+	<!-- 
+	
 		<div class="home">
 				<a href="index.html"><h2>home</h2></a>
 		</div>
+ -->
 
 	
 		<div class="footer">
