--- a/hirondelle.html
+++ b/hirondelle.html
@@ -21,11 +21,15 @@
 			<div class="descriptif">
 				Création d'une identité ainsi que de ses accessoires
 				pour une librairie fictive.
+								<a href="index.html"><h2>home</h2></a>
+
 			</div>
-			
+		<!-- 
+	
 			<div class="home">
 				<a href="index.html"><h2>home</h2></a>
 			</div>
+ -->
 
 	
 		<div class="footer">
