--- a/jjdress.html
+++ b/jjdress.html
@@ -16,12 +16,16 @@
 
 			<div class="descriptif">
 				Création du logo ainsi que de la carte de visite pour la boutique de prêt-à-porter lausannoise JJ Dress.
+								<a href="index.html"><h2>home</h2></a>
+
 			</div>
-								</div>
 			
-			<div class="home">
+			
+		<!-- 
+	<div class="home">
 				<a href="index.html"><h2>home</h2></a>
 			</div>
+ -->
 
 
 	
