--- a/porteouverte.html
+++ b/porteouverte.html
@@ -17,11 +17,15 @@
 
 			<div class="descriptif">
 				Workshop avec l’Atelier Poisson où nous avons du réaliser une affiche pour les portes ouvertes de l’ERACOM.	
-			</div>
 			
-			<div class="home">
+							<a href="index.html"><h2>home</h2></a>
+</div>
+			
+		<!-- 
+	<div class="home">
 				<a href="index.html"><h2>home</h2></a>
 			</div>
+ -->
 
 	
 		<div class="footer">
