--- a/voeux.html
+++ b/voeux.html
@@ -21,11 +21,15 @@
 			<div class="descriptif">
 				Cartes de voeux réalisées<br>
 				lors d'un Workshop à l'ERACOM.
+				<a href="index.html"><h2>home</h2></a>
+
 			</div>
-			
+		<!-- 
+	
 			<div class="home">
 				<a href="index.html"><h2>home</h2></a>
 			</div>
+ -->
 
 	
 		<div class="footer">
