--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 						<li><a href="#" onclick="filtrer('photo');">photographie</a></li>
 						<!-- <li><a href="#" onclick="filtrer('illustration');">illustration</a></li> -->
 						<li><a href="about.html">hey</a></li>
-						
 						<li><a href="https://www.instagram.com/fionadelaloye_/">instagram</a></li>
+						<li><a href="mailto:delaloyefiona@gmail.com">contact</a></li>
 						<!--<li><a href="mariages.html">pro</a></li>-->
 					</ul>
 				</div><!-- fin nav -->
