--- a/calembour.html
+++ b/calembour.html
@@ -14,6 +14,15 @@
 		<div class="galerie">
 			<img src="img/calembour/calembour1.jpg">
 			<img src="img/calembour/calembour2.jpg">
+			<img src="img/calembour/calembour8.jpg">
+			<img src="img/calembour/calembour9.jpg">
+			<img src="img/calembour/calembour10.jpg">
+			<img src="img/calembour/calembour3.jpg">
+			<img src="img/calembour/calembour4.jpg">
+			<img src="img/calembour/calembour5.jpg">
+			<img src="img/calembour/calembour6.jpg">
+			<img src="img/calembour/calembour7.jpg">
+
 			<img src="img/calembour/calembour.gif">
 		</div>
 			
