--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 						<li><a href="#" onclick="filtrer('photo');">photographie</a></li>
 						<!-- <li><a href="#" onclick="filtrer('illustration');">illustration</a></li> -->
 						<li><a href="about.html">hey</a></li>
+<!-- 
+						<li><a href="trucs.html">trucs</a></li>
+ -->
 						<li><a href="https://www.instagram.com/fionadelaloye_/">instagram</a></li>
 						<li><a href="mailto:delaloyefiona@gmail.com">contact</a></li>
 						<!--<li><a href="mariages.html">pro</a></li>-->
