Ajout de la rubrique illustration

--- a/blanc.html
+++ b/blanc.html
@@ -17,8 +17,10 @@
 		</div>
 			
 		<div class="descriptif">
-			Projet en cours d’un documentaire fictif où j’illustre la vie d’une jeune fille qui ressent le besoin de s’entourer complètement de blanc.
-						<a href="index.html"><h2>home</h2></a>
+			Projet photographique en cours d’un documentaire fictif 
+			où j’illustre la vie d’une jeune fille qui ressent le besoin 
+			de s’entourer complètement de blanc.						
+			<a href="index.html"><h2>home</h2></a>
 
 		</div>
 	<!-- 
