--- a/hirondelle.html
+++ b/hirondelle.html
@@ -19,8 +19,8 @@
 			</div>
 
 			<div class="descriptif">
-				Création d'une identité ainsi que de ses accessoires
-				pour une librairie fictive.
+				Création d’un logo pour une librairie fictive ainsi 
+				que ses déclinaisons papiers et accessoires.
 								<a href="index.html"><h2>home</h2></a>
 
 			</div>
