--- a/hommage.html
+++ b/hommage.html
@@ -20,8 +20,10 @@
 			</div>
 
 			<div class="descriptif">
-				Réalisation d’un projet visant à rendre hommage à l’artiste de notre choix (ici, le photographe Hannes Caspar) en reprenant certains de ses codes, ambiances, idées. 
-							<a href="index.html"><h2>home</h2></a>
+			Projet photographique visant à rendre hommage à l’artiste 
+			de notre choix (ici, le photographe Hannes Caspar) 
+			en reprenant certains de ses codes, ambiances, idées. 							
+			<a href="index.html"><h2>home</h2></a>
 
 			
 			</div>
