--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 						<li><a href="index.html"><h1>Fiona Delaloye</h1></a></li>
  						<li><a href="#" onclick="filtrer('graphisme');">graphisme</a></li>
 						<li><a href="#" onclick="filtrer('photo');">photographie</a></li>
-						<!-- <li><a href="#" onclick="filtrer('illustration');">illustration</a></li> -->
+						<li><a href="trucs.html" onclick="filtrer('illustration');">illustration</a></li>						
 						<li><a href="about.html">hey</a></li>
 <!-- 
 						<li><a href="trucs.html">trucs</a></li>
