--- a/jjdress.html
+++ b/jjdress.html
@@ -15,9 +15,9 @@
 				<img src="img/jjdress/jjdress4.jpg">
 
 			<div class="descriptif">
-				Création du logo ainsi que de la carte de visite pour la boutique de prêt-à-porter lausannoise JJ Dress.
-								<a href="index.html"><h2>home</h2></a>
-
+				Création du logo ainsi que de la carte de visite pour la boutique de prêt-à-porter lausannoise JJ Dress.							
+			<a href="index.html">
+			<h2>home</h2></a>
 			</div>
 			
 			
