--- a/porteouverte.html
+++ b/porteouverte.html
@@ -16,8 +16,8 @@
 			</div>
 
 			<div class="descriptif">
-				Workshop avec l’Atelier Poisson où nous avons du réaliser une affiche pour les portes ouvertes de l’ERACOM.	
-			
+			Réalisation d’une affiche pour les portes ouvertes 
+			de l’ERACOM, année 2016.			
 							<a href="index.html"><h2>home</h2></a>
 </div>
 			
