--- a/trucs.html
+++ b/trucs.html
@@ -12,18 +12,22 @@
 	<body>
 		<div id="global">
 			<div class="galerietrucs">
-				<img src="img/trucs/truc1.jpg">
-				<img src="img/trucs/truc2.jpg">
-				<img src="img/trucs/truc3.jpg">
-				<img src="img/trucs/truc4.jpg">
-				<img src="img/trucs/truc5.jpg">
-				<img src="img/trucs/truc6.jpg">
+				<p>Comme j'aime bien gribouiller, autant le faire partager.</p>.
+				<img src="img/trucs/illu5.jpg">
+				<img src="img/trucs/illu4.jpg">
+				<img src="img/trucs/illu3.jpg">
+				<img src="img/trucs/illu1.jpg">
+				<img src="img/trucs/illu6.jpg">
+
+	<!-- 
+			<img src="img/trucs/illu6.jpg">
 				<img src="img/trucs/truc7.jpg">
 				<img src="img/trucs/truc8.jpg">
 				<img src="img/trucs/truc9.jpg">
 				<img src="img/trucs/truc10.jpg">
 				<img src="img/trucs/truc11.jpg">
 				<img src="img/trucs/truc12.jpg">
+ -->
 			</div>
 
 	
