--- a/trucs.html
+++ b/trucs.html
@@ -12,16 +12,18 @@
 	<body>
 		<div id="global">
 			<div class="galerietrucs">
-				<p>Comme j'aime bien gribouiller, autant le faire partager.</p>.
+				<p>Comme j'aime bien gribouiller, autant le faire partager.<br>
+				Certains dessins viennent de projets réalisés aux cours, d'autres viennent de ma tête!</p>.
 				<img src="img/trucs/illu5.jpg">
 				<img src="img/trucs/illu4.jpg">
 				<img src="img/trucs/illu3.jpg">
 				<img src="img/trucs/illu1.jpg">
-				<img src="img/trucs/illu6.jpg">
+				<img src="img/trucs/illu6.jpg">			
+				<img src="img/trucs/illu7.jpg">
+
 
 	<!-- 
 			<img src="img/trucs/illu6.jpg">
-				<img src="img/trucs/truc7.jpg">
 				<img src="img/trucs/truc8.jpg">
 				<img src="img/trucs/truc9.jpg">
 				<img src="img/trucs/truc10.jpg">
