--- a/trucs.html
+++ b/trucs.html
@@ -13,7 +13,10 @@
 		<div id="global">
 			<div class="galerietrucs">
 				<p>Comme j'aime bien gribouiller, autant le faire partager.<br>
-				Certains dessins viennent de projets réalisés aux cours, d'autres viennent de ma tête!</p>.
+				Certains dessins viennent de projets réalisés aux cours, d'autres viennent de ma tête!
+			<br><br>
+			<a href="index.html"><b>home</b></a></p>
+
 				<img src="img/trucs/illu5.jpg">
 				<img src="img/trucs/illu4.jpg">
 				<img src="img/trucs/illu3.jpg">
