--- a/illustrations.html
+++ b/illustrations.html
@@ -17,12 +17,12 @@
 			<br><br>
 			<a href="index.html"><b>home</b></a></p>
 
-				<img src="img/trucs/illu5.jpg">
-				<img src="img/trucs/illu4.jpg">
-				<img src="img/trucs/illu3.jpg">
-				<img src="img/trucs/illu1.jpg">
-				<img src="img/trucs/illu6.jpg">			
-				<img src="img/trucs/illu7.jpg">
+				<img src="img/illustrations/illu5.jpg">
+				<img src="img/illustrations/illu4.jpg">
+				<img src="img/illustrations/illu3.jpg">
+				<img src="img/illustrations/illu1.jpg">
+				<img src="img/illustrations/illu6.jpg">			
+				<img src="img/illustrations/illu7.jpg">
 
 
 	<!-- 
