Ajout texte piscine

--- a/piscine.html
+++ b/piscine.html
@@ -21,7 +21,8 @@
 		</div>
 			
 		<div class="descriptif">
-			Workshop où nous devions fournir des créations libres aidant à la promotion d’un abonnement pour cinq piscines lausannoises.
+			Workshop où nous devions fournir des créations libres aidant à la promotion d’un abonnement pour cinq piscines lausannoises.<br><br>
+			Ce projet a été choisi par la commune de Pully pour la partie communication !
 			<a href="index.html"><h2>home</h2></a>
 		</div>
 		
