--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
 					</ul>
 				</div><!-- fin nav -->
 				<div class="galerienav">
+						<a class="objet graphisme" href="eff.html"><img class="opacite" src="img/index/eff.jpg"></a>
 						<a class="objet graphisme" href="piscine.html"><img class="opacite" src="img/index/piscine.jpg"></a>
+						<a class="objet graphisme" href="calembour.html"><img class="opacite" src="img/index/calembour.jpg"></a>
 						<a class="objet photo" href="hommage.html"><img class="opacite" src="img/index/hommage.jpg"></a>
 						<a class="objet graphisme" href="voeux.html"><img class="opacite" src="img/index/voeux.jpg"></a>
 						<a class="objet photo" href="blanc.html"><img class="opacite" src="img/index/blanc.jpg"></a>
 						<a class="objet graphisme" href="cafe.html"><img class="opacite" src="img/index/cafe.jpg"></a>
 						<a class="objet graphisme" href="porteouverte.html"><img class="opacite" src="img/index/porteouverte.jpg"></a>
-						<a class="objet graphisme" href="calembour.html"><img class="opacite" src="img/index/calembour.jpg"></a>
 						<a class="objet graphisme" href="hirondelle.html"><img class="opacite" src="img/index/hirondelle.jpg"></a>
+						
 						<!-- <a class="objet illustration" href="illustration.html"><img class="opacite" src="img/illustration/illustration1.jpg"></a> -->
 						<!-- <a class="objet graphisme" href="jjdress.html"><img class="opacite" src="img/index/jjdress.jpg"></a> -->
 				</div> <!-- fin galerienav -->
